# CPlusPlusNeuralNetwork

./: .gitignore  CMakeLists.txt  CPlusPlusNeuralNetwork.sln  NeuralNetwork.sln
NeuralNetwork/: AMSGradOptimizer.cpp  AMSGradOptimizer.h  AbsoluteReLUFunction.cpp  AbsoluteReLUFunction.h  ActivationFunction.cpp  ActivationFunction.h  ActivationFunctionFactory.cpp  ActivationFunctionFactory.h  ActivationFunctionNeuralLayer.cpp  ActivationFunctionNeuralLayer.h  AdadeltaOptimizer.cpp  AdadeltaOptimizer.h  AdagradOptimizer.cpp  AdagradOptimizer.h  AdamOptimizer.cpp  AdamOptimizer.h  AdamaxOptimizer.cpp  AdamaxOptimizer.h  AveragePooling1DFunction.cpp  AveragePooling1DFunction.h  AveragePooling1DNeuralLayer.cpp  AveragePooling1DNeuralLayer.h  AveragePooling2DFunction.cpp  AveragePooling2DFunction.h  AveragePooling2DNeuralLayer.cpp  AveragePooling2DNeuralLayer.h  AveragePooling3DFunction.cpp  AveragePooling3DFunction.h  AveragePooling3DNeuralLayer.cpp  AveragePooling3DNeuralLayer.h  CReLUFunction.cpp  CReLUFunction.h  ClassCell.cpp  ClassCell.h  ClassifierVisualizer.cpp  ClassifierVisualizer.h  CmakeLists.txt  Convolution1DFunction.cpp  Convolution1DFunction.h  Convolution1DNeuralLayer.cpp  (+157 more)
NeuralNetwork/hdr/: NetworkExceptions.h  NeuralNetwork.h  NeuralNetworkFileHelper.h  ParameterSet.h  Test.h
NeuralNetwork/hdr/ActivationFunction/: AbsoluteReLUFunction.h  ActivationFunction.h  ActivationFunctionFactory.h  CReLuFunction.h  ELUFunction.h  ExponentialFunction.h  GELUFunction.h  HardSigmoidFunction.h  IdentityFunction.h  LeakyReLuFunction.h  PReLUFunction.h  QuadraticFunction.h  ReLU6Function.h  ReLUFunction.h  ReLUnFunction.h  SELUFunction.h  SigmoidFunction.h  SoftplusFunction.h  SoftsignFunction.h  SwishFunction.h  TanhFunction.h
NeuralNetwork/hdr/LossFunction/: CrossEntropyLossFunction.h  LossFunction.h  MeanSquareErrorLossFunction.h
NeuralNetwork/hdr/NeuralLayer/: ActivationFunctionNeuralLayer.h  DenseNeuralLayer.h  DropoutNeuralLayer.h  FlattenNeuralLayer.h  InputNeuralLayer.h  MaxoutNeuralLayer.h  (+3 more)
NeuralNetwork/src/: NeuralNetwork.cpp  Test.cpp
TestApplication/: CMakeLists.txt  CVTests.cpp  CatDogDataset.h  CatDogTests.cpp  IrisDataset.h  IrisTests.cpp  MNISTTests.cpp  SignalTests.cpp  TestApplication.cpp  TestApplication.h  TestApplication.vcxproj  TestApplication.vcxproj.filters  Tests.h  imgui.ini
TestApplication/data/: binary_maker.py  mnist_binary.csv  mnist_dev.csv  padding_test.py  pooling_test.py
TestApplication/hdr/: TestApplication.h
TestApplication/hdr/Dataset/: IrisDataset.h
TestApplication/hdr/Test/: Tests.h
TestApplication/src/: TestApplication.cpp
TestApplication/src/Test/: CVTests.cpp  CatDogTests.cpp  IrisTests.cpp  MNISTTests.cpp  SignalTests.cpp
x64/Release/: imgui.ini
(+93 files in other folders)
